Rename API db server fields
